// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of an Icon control with icon 1`] = `
<i
  className="ui-icon icon none fa fa-star normal test-class"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
    }
  }
/>
`;

exports[`Test creation of an Icon control with image 1`] = `
<img
  className="ui-icon icon none normalBox"
  src="./test-icon-image.png"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
/>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
<Icon
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  iconName="bomb"
  id=""
  imageFile=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={false}
>
  <i
    className="ui-icon icon none fa fa-bomb normal invisible"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
  />
</Icon>
`;

exports[`Test retrieval of the Icon props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "iconName": "bomb",
  "id": "",
  "imageFile": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "visible": true,
}
`;

exports[`Test the disabling of the Icon control 1`] = `
<Icon
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  iconName="bomb"
  id=""
  imageFile=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <i
    className="ui-icon icon none fa fa-bomb normal disabled nohover"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
  />
</Icon>
`;
